attempting to fix resume spacing issue again:

--- a/src/pages/Resume.css
+++ b/src/pages/Resume.css
@@ -14,7 +14,7 @@
   }
 
   .certificate-image{
-    width: 100%;
+    width: 50%;
     height: auto;
   }
 
